# TinyDocUnet

./: README.md  main.py  pyproject.toml
dataset/: generate.py
dataset/generated_grayscale/labels/: 000000.npy  000001.npy  000002.npy  000003.npy  000004.npy  000005.npy  000006.npy  000007.npy  000008.npy  000009.npy
src/tinydocunet/: model.py  predict.py  td_dataset.py  train.py
