[project]
name = "tinydocunet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "opencv-python>=4.11.0.86",
    "scikit-image>=0.25.2",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
]
